# Camellia

./: .audit_signing_key  .dockerignore  .env.example  .gitignore  .npmignore  .pre-commit-config.yaml  .vercelignore  06b81cd2-e738-4087-9ded-cf128d0b91c1  212e8efa-b0a5-473f-b7a3-7f1f42f6871d  4a1a2276-a7f9-4ba9-9152-807312dd4c5b  534abd95-f1c5-4471-810e-782d6f6dd364  552d8a94-5c68-4741-bf5a-2cd80570f4b8  8123d9b0-572f-42be-a569-a632ebc89a2e  84e75676-9d62-40f2-9928-35ab7b45b197  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  a8c6922a-3b79-46df-ae48-46e4376b6759  alembic.ini  app.py  auth.py  client_secrets.json  cloud_services.py  config.py  conversion.py  d6740413-6faa-4b01-ace2-e4ff53473847  docker-compose.yml  f73ff96b-5d41-4bd0-861d-d3de74e272df  file_processing.py  fly.toml  gui.py  history.json  logic.py  login.py  main.py  package-lock.json  package.json  pyproject.toml  (+18 more)
.github/workflows/: argon2_benchmark.yml  ci.yml  codeql.yml  snyk.yml
.jules/: sentinel.md
alembic/: env.py
alembic/versions/: 20260402_0001_baseline.py
api/: access.py  audit.py  auth.py  ops.py  projects.py  vault.py
backend/: .eslintrc.cjs  jest.config.cjs  jest.e2e.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
components/: conversion.py
core/: async_jobs.py  observability.py  tasks.py
docs/: DEPLOYMENT_CONFIG.md  DEPLOY_QUICK_START.md  DEPLOY_STRATEGY.md  DETAILED_CODE_REVIEW.md  DETAILED_DOCUMENTATION.md  GITHUB_PUBLISH_CHECKLIST.md  SECURITY_ANALYSIS.md  architecture_flowchart.md  backend-frontend-report.md  incident_response.md  kms_migration.md  oidc_mfa.md  repro_builds.md  roadmap_cert_and_pentest.md
frontend/: eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
scripts/: argon2_bench.py  backup_encrypt.py  check_secrets.sh  deploy.sh  generate_docs.py  init_iam_db.py  pin_requirements.sh  reset_mfa.py  start-server.sh  sync-lock.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
templates/: index.html
tests/: test_auth.py  test_aws_kms.py  test_crypto_engine.py  test_kms_integration.py  test_mfa_probe.py  test_repository_api.py  test_stream_engine.py  test_vault_manager.py  verify_phase1.py
utils/: supabase_storage.py
(+170 files in other folders)
