[project]
name = "camellia-shield-backend"
version = "2.1.0"
description = "Camellia Shield Flask backend for Vercel deployment"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Flask>=3.1.0,<4.0",
  "Werkzeug>=3.1.0,<4.0",
  "itsdangerous>=2.2.0,<3.0",
  "flask-talisman>=1.1.0",
  "flask-seasurf>=2.0.0",
  "Flask-Limiter>=3.8.0,<5.0",
  "cryptography>=44.0.1",
  "argon2-cffi>=25.1.0",
  "pynacl>=1.5.0",
  "PyJWT>=2.9.0,<3.0",
  "pyotp>=2.9.0",
  "qrcode[pil]>=8.0",
  "SQLAlchemy>=2.0.0,<3.0",
  "boto3>=1.34.0",
  "Pillow>=10.3.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]
