[package]
name = "camellia-shield"
version = "2.1.0"
description = "Camellia Shield — Hardened Secure Local Workspace"
authors = ["Rodrigo Lima"]
license = "MIT"
repository = ""
default-run = "camellia-shield"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "camellia_shield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
